--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-js----Maximilian  Schwarzmuller",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jisesmon.github.io/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -12,8 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -23,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
