--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.10.15", 
+    "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.2.1",
     "faker": "^6.6.6",
     "react": "^18.2.0",
