--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^4.2.1",
+    "d3-ease": "^3.0.1",
     "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-move": "^6.5.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
